--- a/composer.json
+++ b/composer.json
@@ -15,18 +15,18 @@
         }
     },
     "require": {
-        "php": ">=5.6",
-        "symfony/config": "^2.8",
-        "symfony/dependency-injection": "^2.8",
+        "php": ">=8.1.4",
+        "symfony/config": "5.4.*",
+        "symfony/dependency-injection": "5.4.*",
         "doctrine/orm": "^2.9",
-        "symfony/security-bundle": "^2.8",
+        "symfony/security-bundle": "5.4.*",
         "doctrine/common": "^3.1",
-        "symfony/serializer": "^2.8"
+        "symfony/serializer": "5.4.*"
     },
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "2.8.*"
+            "require": "5.4.*"
         }
     }
 }
