--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "doctrine/orm": "^2.9",
         "symfony/security-bundle": "5.4.*",
         "doctrine/common": "^3.1",
-        "symfony/serializer": "5.4.*"
+        "symfony/serializer": "5.4.*",
+        "symfony/yaml": "^5.4"
     },
     "extra": {
         "symfony": {
